# accelerated_drug_discovery

./: .gitignore  README.md  pepfunn_reqs.txt  pyproject.toml  requirements.txt
accelerated_drug_discovery/: Makefile
data/: peptideBert_results.csv
data/interim/: filtered_seqs.fasta  filtered_seqs_cd_hit.ctd.csv  filtered_seqs_cd_hit.dpc.csv  filtered_seqs_cd_hit.rri.csv  filtered_seqs_cd_hit.txt  filtered_seqs_cd_hit.txt.clstr
data/processed/: generated_seqs.csv  generated_seqs_len17.csv  generated_seqs_len30.csv  positve_sequences.csv  sequences_reviewed.csv
data/raw/: peptide_library_all.xlsx  peptides_cancer.csv  peptides_labeled.csv  vegf.csv
models/: dtr_model.pkl
notebooks/: ProtXLNet_generador.ipynb  Prot_XLNet_fine_tune.ipynb  Prot_XLNet_fine_tune_sec_gen.ipynb  compout_1  compout_2  compout_3  model_deploy.ipynb  preprocess.py  process_seqs.ipynb  seq_cleanup.py  sequence_generator.ipynb  tempfile_out
