[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "accelerated_drug_discovery"
version = "0.0.1"
description = "Cancer drug development using AI"
authors = [
  { name = "MNA" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["accelerated_drug_discovery"]
include = ["pyproject.toml", "accelerated_drug_discovery/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["accelerated_drug_discovery"]
force-sort-within-sections = true

